unpackaged/main/default/objects/Account/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <formula>IF(
  AND(NOT(ISBLANK(Latest_Opp_Created__c)), ISBLANK(Latest_Case_Created__c)),
  /* Only Opp exists */
  TEXT(Latest_Opp_Created__r.StageName) &amp; &quot; - &quot; &amp; TEXT(Latest_Opp_Created__r.Sub_Stage__c),

  IF(
    AND(ISBLANK(Latest_Opp_Created__c), NOT(ISBLANK(Latest_Case_Created__c))),
    /* Only Case exists */
    TEXT(Latest_Case_Created__r.Status) &amp; &quot; - &quot; &amp; TEXT(Latest_Case_Created__r.Sub_status__c),

    IF(
      AND(NOT(ISBLANK(Latest_Opp_Created__c)), NOT(ISBLANK(Latest_Case_Created__c))),
      /* Both exist: pick the newer */
      IF(
        Latest_Opp_Created__r.CreatedDate &gt; Latest_Case_Created__r.CreatedDate,
        TEXT(Latest_Opp_Created__r.StageName) &amp; &quot; - &quot; &amp; TEXT(Latest_Opp_Created__r.Sub_Stage__c),
        TEXT(Latest_Case_Created__r.Status) &amp; &quot; - &quot; &amp; TEXT(Latest_Case_Created__r.Sub_status__c)
      ),
      /* Neither exists */
      &quot;&quot;
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Status</label>
    <type>Text</type>
</CustomField>