unpackaged/main/default/objects/Account/fields/Add_to_f9list_id__c.field-meta.xml
<CustomField>
    <fullName>Add_to_f9list_id__c</fullName>
    <label>Add_to_f9list_id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>