unpackaged/main/default/objects/Account/fields/bt_stripe__Active_ARR__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Active_ARR__c</fullName>
    <description>Annual revenue.</description>
    <inlineHelpText>The total amount of Draft or Sent annually recurring subscription invoices.</inlineHelpText>
    <label>Upcoming ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>