unpackaged/main/default/objects/Account/fields/bt_stripe__Historical_Account_Value__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Historical_Account_Value__c</fullName>
    <description>Historical Account Value.</description>
    <inlineHelpText>Historical Account Value.</inlineHelpText>
    <label>Historical Account Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>