unpackaged/main/default/objects/Account/fields/bt_stripe__Last_Finalized_QRR__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Last_Finalized_QRR__c</fullName>
    <description>The total amount of finalized or Paid &#39;every 3 month&#39; billing subscription invoices.</description>
    <inlineHelpText>The total amount of finalized or Paid &#39;every 3 month&#39; billing subscription invoices.</inlineHelpText>
    <label>Last Finalized QRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>