unpackaged/main/default/objects/Account/fields/Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner__c</fullName>
    <formula>Latest_Case_Created__r.Owner:User.FirstName &amp; &quot; &quot;&amp; Latest_Case_Created__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner</label>
    <type>Text</type>
</CustomField>