unpackaged/main/default/objects/Account/fields/clientCityStateZipCode__c.field-meta.xml
<CustomField>
    <fullName>clientCityStateZipCode__c</fullName>
    <description>This field contains the client&#39;s city, the state they are located in, and the zip code of the area they are in; this field combines the three fields.</description>
    <formula>BillingCity &amp; &quot;, &quot; &amp; BillingState &amp; &quot;, &quot; &amp;  BillingPostalCode</formula>
    <label>clientCityStateZipCode</label>
    <type>Text</type>
</CustomField>