unpackaged/main/default/objects/Account/fields/Date_Of_Birthday__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Birthday__c</fullName>
    <formula>TEXT(MONTH( Date_of_Birth__pc )) &amp; &quot;/&quot; &amp; TEXT(DAY( Date_of_Birth__pc )) &amp; &quot;/&quot; &amp; TEXT(YEAR( Date_of_Birth__pc ))</formula>
    <label>Date_Of_Birthday</label>
    <type>Text</type>
</CustomField>