unpackaged/main/default/objects/Account/fields/flipped_client__c.field-meta.xml
<CustomField>
    <fullName>flipped_client__c</fullName>
    <label>Flipped Client</label>
    <length>10</length>
    <type>Text</type>
</CustomField>