unpackaged/main/default/objects/Account/fields/Google_Drive_Folder_ID__c.field-meta.xml
<CustomField>
    <fullName>Google_Drive_Folder_ID__c</fullName>
    <label>Google Drive Folder ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>