unpackaged/main/default/objects/Account/fields/Google_Drive_Folder_Link__c.field-meta.xml
<CustomField>
    <fullName>Google_Drive_Folder_Link__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Google_Drive_Folder_ID__c)),
    HYPERLINK(&quot;https://drive.google.com/drive/folders/&quot; &amp; Google_Drive_Folder_ID__c, &quot;Access Google Drive Folder&quot;, &quot;_blank&quot;),
    &quot;No Folder Available&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Google Drive Folder Link</label>
    <type>Text</type>
</CustomField>