unpackaged/main/default/objects/Account/fields/Has_a_Business__c.field-meta.xml
<CustomField>
    <fullName>Has_a_Business__c</fullName>
    <description>Does this client has a business?</description>
    <inlineHelpText>Does this client has a business?</inlineHelpText>
    <label>Has a Business?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>