unpackaged/main/default/objects/Account/fields/Is_Pitched_Nurture_Opp_Stage__c.field-meta.xml
<CustomField>
    <fullName>Is_Pitched_Nurture_Opp_Stage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Pitched Nurture Opp Stage</label>
    <type>Checkbox</type>
</CustomField>