unpackaged/main/default/objects/Account/fields/ITR_Id__c.field-meta.xml
<CustomField>
    <fullName>ITR_Id__c</fullName>
    <description>ITR Unique Identifier between Salesforce and Velocify (SOT)</description>
    <externalId>true</externalId>
    <inlineHelpText>ITR Unique Identifier between Salesforce and Velocify (SOT)</inlineHelpText>
    <label>ITR ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>