unpackaged/main/default/objects/Account/fields/Last_SMS_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_SMS_Received_Date__c</fullName>
    <description>Store the date when the last SMS history of type incoming was created.</description>
    <label>Last SMS Received Date</label>
    <type>DateTime</type>
</CustomField>