unpackaged/main/default/objects/Account/fields/Last_SMS_Text__c.field-meta.xml
<CustomField>
    <fullName>Last_SMS_Text__c</fullName>
    <description>Stores the information of the last incoming SMS text</description>
    <label>Last SMS Text</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>