unpackaged/main/default/objects/Account/fields/Latest_Case_Created__c.field-meta.xml
<CustomField>
    <fullName>Latest_Case_Created__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Case Created</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>