unpackaged/main/default/objects/Account/fields/Latest_Opp_Created__c.field-meta.xml
<CustomField>
    <fullName>Latest_Opp_Created__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Opp Created</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>