unpackaged/main/default/objects/Account/fields/Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_Id__c</fullName>
    <label>Lead Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>