unpackaged/main/default/objects/Account/fields/LiveVox__c.field-meta.xml
<CustomField>
    <fullName>LiveVox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to trace accounts that have been created on LiveVox</description>
    <inlineHelpText>Is this lead on LiveVox?</inlineHelpText>
    <label>LiveVox</label>
    <type>Checkbox</type>
</CustomField>