unpackaged/main/default/objects/Account/fields/Nickname_Goes_By__c.field-meta.xml
<CustomField>
    <fullName>Nickname_Goes_By__c</fullName>
    <label>Nickname Goes By</label>
    <length>20</length>
    <type>Text</type>
</CustomField>