unpackaged/main/default/objects/Account/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <formula>Latest_Opp_Created__r.Owner.FirstName&amp;&quot; &quot;&amp; Latest_Opp_Created__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner</label>
    <type>Text</type>
</CustomField>