unpackaged/main/default/objects/Account/fields/Pitched_Nurture_Opp_Stage_Count__c.field-meta.xml
<CustomField>
    <fullName>Pitched_Nurture_Opp_Stage_Count__c</fullName>
    <label>Pitched Nurture Opp Stage Count</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Lost</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Loss_Reason__c</field>
        <operation>equals</operation>
        <value>Pitched Nurture</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>