unpackaged/main/default/objects/Account/fields/POAs_in_the_Past__c.field-meta.xml
<CustomField>
    <fullName>POAs_in_the_Past__c</fullName>
    <inlineHelpText>How many times has someone hired professional tax help in the past, in which they have a POA (Power of Attorney) on file with the IRS?</inlineHelpText>
    <label>POAs in the Past</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>