unpackaged/main/default/objects/Account/fields/Rating_Spouse__c.field-meta.xml
<CustomField>
    <fullName>Rating_Spouse__c</fullName>
    <label>Rating Spouse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>Tier 4</fullName>
            </value>
            <value>
                <fullName>Tier 5</fullName>
            </value>
            <value>
                <fullName>NotScr</fullName>
            </value>
            <value>
                <fullName>Frozn</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
                <isActive>false</isActive>
                <label>Cold</label>
            </value>
            <value>
                <fullName>Good</fullName>
                <isActive>false</isActive>
                <label>Good</label>
            </value>
            <value>
                <fullName>Tier 52</fullName>
                <isActive>false</isActive>
                <label>Tier 52</label>
            </value>
            <value>
                <fullName>Warm</fullName>
                <isActive>false</isActive>
                <label>Warm</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>