unpackaged/main/default/objects/Account/fields/Referred_by__c.field-meta.xml
<CustomField>
    <fullName>Referred_by__c</fullName>
    <label>Referred by</label>
    <type>TextArea</type>
</CustomField>