unpackaged/main/default/objects/Account/fields/Spanish_Speaking__c.field-meta.xml
<CustomField>
    <fullName>Spanish_Speaking__c</fullName>
    <label>Spanish Speaking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>