unpackaged/main/default/objects/Account/fields/Spouse_Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Date_Of_Birth__c</fullName>
    <description>To extract the month, day and year from the Spouse_Date_of_Birth, remove the 0&#39;s and organize it to be populated on zoho fields MM/DD/YYYY</description>
    <formula>TEXT(MONTH( Spouse_Date_of_Birth__pc  )) &amp; &quot;-&quot; &amp; TEXT(DAY(Spouse_Date_of_Birth__pc)) &amp; &quot;-&quot; &amp; TEXT(YEAR( Spouse_Date_of_Birth__pc ))</formula>
    <label>Spouse_Date_Of_Birth</label>
    <type>Text</type>
</CustomField>