unpackaged/main/default/objects/Account/fields/Spouse_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Full_Name__c</fullName>
    <description>This field is the combination of the spouse&#39;s first name and last name.</description>
    <formula>Spouse_First_Name__pc &amp; &quot; &quot; &amp; Spouse_Middle_Initial__c &amp; &quot; &quot; &amp; Spouse_Last_Name__pc</formula>
    <label>Spouse Full Name</label>
    <type>Text</type>
</CustomField>