unpackaged/main/default/objects/Account/fields/Spouse_Middle_Initial__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Middle_Initial__c</fullName>
    <label>Spouse Middle Initial</label>
    <length>20</length>
    <type>Text</type>
</CustomField>