unpackaged/main/default/objects/Account/fields/Spouse_Nickname_Goes_By__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Nickname_Goes_By__c</fullName>
    <label>Spouse Nickname Goes By</label>
    <length>30</length>
    <type>Text</type>
</CustomField>