unpackaged/main/default/objects/Account/fields/SSN_Hash__c.field-meta.xml
<CustomField>
    <fullName>SSN_Hash__c</fullName>
    <description>This field is use it for Create/Update Account Duplicate Rule</description>
    <label>SSN Hash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>