unpackaged/main/default/objects/Account/fields/Velocify_First_Trader__c.field-meta.xml
<CustomField>
    <fullName>Velocify_First_Trader__c</fullName>
    <label>Velocify First Trader</label>
    <length>255</length>
    <type>Text</type>
</CustomField>