unpackaged/main/default/objects/Account/fields/Velocify_Id_Final__c.field-meta.xml
<CustomField>
    <fullName>Velocify_Id_Final__c</fullName>
    <description>Velocify ID Final Value after Data Migration Jan 2025</description>
    <externalId>true</externalId>
    <label>Velocify Id Final</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>