unpackaged/main/default/objects/Account/fields/X18_Digit_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_Account_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Digit Account Id</label>
    <type>Text</type>
</CustomField>