unpackaged/main/default/objects/Account/listViews/Contacted_Leads.listView-meta.xml
<ListView>
    <fullName>Contacted_Leads</fullName>
    <columns>Velocify_Id__pc</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>PC_PHONE3</columns>
    <columns>PC_LEAD_SOURCE</columns>
    <columns>Time_Zone__pc</columns>
    <columns>Total_Tax_Debt__pc</columns>
    <columns>Count_of_Opportunities__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>PC_LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Aged DT U30</value>
    </filters>
    <label>Contacted Leads</label>
    <sharedTo>
        <group>ITR_First_Trader</group>
    </sharedTo>
</ListView>