unpackaged/main/default/objects/Account/listViews/Open_Oppotunities.listView-meta.xml
<ListView>
    <fullName>Open_Oppotunities</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Count_of_Opportunities__c</field>
        <operation>greaterOrEqual</operation>
        <value>0</value>
    </filters>
    <label>Accounts with Opportunities</label>
    <sharedTo>
        <group>ITR_First_Trader</group>
    </sharedTo>
</ListView>